Set required version number due to lodash vulnerability
CVE-2019-10744

Vulnerable versions: < 4.17.13

Also:

- Fix randomly failing end-to-end test
- Updated karma packages to newer versions
- Removed redundant http-server package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -17,17 +17,16 @@
     "GPS"
   ],
   "devDependencies": {
-    "copyfiles": "^2.1.0",
+    "copyfiles": "^2.1.1",
     "cssmin": "^0.4.3",
     "firefox-profile": "^1.0.0",
-    "http-server": "^0.11.1",
     "jasmine-core": "^2.8.0",
     "jshint": "^2.9.1",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.0",
-    "karma-junit-reporter": "^1.0.0",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-junit-reporter": "^1.2.0",
     "karma-safari-launcher": "^1.0.0",
     "mkdirp": "^0.5.1",
     "protractor": "^5.1.1",
@@ -62,7 +61,7 @@
     "jquery": "^3.3.1",
     "leaflet": "1.0.3",
     "leaflet-draw": "0.4.9",
-    "lodash": "lodash/lodash#^4.17.11",
+    "lodash": "lodash/lodash#~>4.17.14",
     "open-location-code": "google/open-location-code#^1.0.3",
     "pagedown": "baminteractive/PageDown#^1.1.0",
     "proj4": "^2.4.4",
