--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "GPS"
   ],
   "resolutions": {
-    "ini": "~1.3.6"
+    "ua-parser-js": "^0.7.24",
+    "xmlhttprequest-ssl": "^1.6.2"
   },
   "devDependencies": {
     "copyfiles": "^2.1.1",
@@ -83,7 +84,7 @@
     "preupdate-webdriver": "$npm_execpath install",
     "update-webdriver-chrome-XX.x.xxxx.xx": "webdriver-manager update --versions.chrome=XX.x.xxxx.xx",
     "update-webdriver": "webdriver-manager update",
-    "_preprotractor": "$npm_execpath run update-webdriver",
+    "preprotractor": "$npm_execpath run update-webdriver",
     "protractor": "protractor test/protractor.conf.js",
     "dist-update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'dist/app/index-async.html');\"",
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'app/index-async.html');\"",
