Update some packages to newer versions
Includes fixes for Tar re CVE-2021-37713

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "planner",
     "GPS"
   ],
-  "resolutions": {},
+  "resolutions": {
+    "jszip": ">=3.7.0"
+  },
   "devDependencies": {
     "adm-zip": "^0.5.5",
     "copyfiles": "^2.1.1",
