--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "planner",
     "GPS"
   ],
-  "resolutions": {},
+  "resolutions": {
+    "engine.io": ">=4.1.2",
+    "follow-redirects": ">=1.14.7",
+    "json-schema": ">=0.4.0",
+    "markdown-it": ">=12.3.2",
+    "marked": ">=4.0.10"
+  },
   "devDependencies": {
     "adm-zip": "^0.5.5",
     "copyfiles": "^2.1.1",
@@ -34,7 +40,7 @@
     "protractor": "^7.0.0",
     "q": "^1.4.1",
     "rimraf": "^3.0.2",
-    "shelljs": "^0.8.4",
+    "shelljs": "^0.8.5",
     "tar": "^6.1.6",
     "uglify-js": "^3.5.0"
   },
