--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.11.3",
+  "version": "1.11.4",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -16,7 +16,9 @@
     "planner",
     "GPS"
   ],
-  "resolutions": {},
+  "resolutions": {
+    "xml2js": "0.5.0"
+  },
   "devDependencies": {
     "adm-zip": "^0.5.5",
     "copyfiles": "^2.1.1",
@@ -85,10 +87,11 @@
     "test-single-run": "karma start test/karma.conf.js  --single-run",
     "preupdate-webdriver": "$npm_execpath install",
     "update-webdriver-chrome-XX.x.xxxx.xx": "webdriver-manager update --versions.chrome=XX.x.xxxx.xx",
+    "update-webdriver-110": "webdriver-manager update --versions.chrome=111.0.5563.110",
     "update-webdriver-109": "webdriver-manager update --versions.chrome=109.0.5414.74",
     "update-webdriver-107": "webdriver-manager update --versions.chrome=107.0.5304.87",
     "update-webdriver": "webdriver-manager update",
-    "preprotractor": "$npm_execpath run update-webdriver-109",
+    "preprotractor": "$npm_execpath run update-webdriver-110",
     "protractor": "protractor test/protractor.conf.js",
     "dist-update-index-async": "node -e \"const shell = require('shelljs'); shell.sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, shell.sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'dist/app/index-async.html');\"",
     "update-index-async": "node -e \"const shell = require('shelljs'); shell.sed('-i', /    \\/\\/ You need to run .yarn run update-index-async. to inject the angular async code here/, shell.sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=node_modules/angular-loader/angular-loader.min.js.map','app/node_modules/angular-loader/angular-loader.min.js'), 'app/index-async.html');\"",
