--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-web-client",
-  "version": "1.11.7",
+  "version": "1.11.8",
   "description": "Trip Recording and Itinerary Planner web client",
   "author": {
     "name": "Frank Dean",
@@ -16,8 +16,13 @@
     "planner",
     "GPS"
   ],
+  "overrides": {
+    "semver": "^7.5.2",
+    "xml2js": "^0.6.0"
+  },
   "resolutions": {
-    "xml2js": "0.5.0"
+    "semver": "^7.5.2",
+    "xml2js": "^0.6.0"
   },
   "devDependencies": {
     "adm-zip": "^0.5.5",
@@ -32,7 +37,6 @@
     "karma-junit-reporter": "^2.0.1",
     "karma-safari-launcher": "^1.0.0",
     "mkdirp": "^2.1.3",
-    "npm-force-resolutions": "0.0.10",
     "protractor": "^7.0.0",
     "q": "^1.4.1",
     "rimraf": "^4.1.1",
@@ -78,7 +82,6 @@
     "yarn": ">= 1.0.0"
   },
   "scripts": {
-    "preinstall": "node -e \"const fs = require('fs'); if (fs.existsSync('package-lock.json') && '$npm_execpath'.indexOf('yarn.js') === -1) { require('child_process').execSync('npx npm-force-resolutions')} \"",
     "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').relative('app', 'node_modules'), 'app/node_modules', 'junction') } catch (e) { }\"",
     "prestart": "$npm_execpath install",
     "start": "cd ../trip-server && node index.js",
